// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Smart Card: Client prefetchData fails silently when prefetching data (stops prefetching) with exponential backoff for an errored URL which recovers with fetch flow: fetch request 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData fails silently when prefetching data (stops prefetching) with exponential backoff for an errored URL which recovers with fetch flow: initial request 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/1",
    },
    Object {
      "resourceUrl": "https://www.google.com/2",
    },
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData fails silently when prefetching data (stops prefetching) with exponential backoff for an errored URL which recovers with fetch flow: retry attempt 1 1`] = `undefined`;

exports[`Smart Card: Client prefetchData fails silently when prefetching data with exponential backoff for an errored URL which does not recover: initial request 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/1",
    },
    Object {
      "resourceUrl": "https://www.google.com/2",
    },
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData fails silently when prefetching data with exponential backoff for an errored URL which does not recover: retry attempt 1 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData fails silently when prefetching data with exponential backoff for an errored URL which does not recover: retry attempt 2 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData fails silently when prefetching data with exponential backoff for an errored URL which does not recover: retry attempt 3 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData successfully triggers prefetching of data for multiple URLs: initial request 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/1",
    },
    Object {
      "resourceUrl": "https://www.google.com/2",
    },
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData successfully triggers prefetching of data with exponential backoff for an errored URL which recovers: initial request 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/1",
    },
    Object {
      "resourceUrl": "https://www.google.com/2",
    },
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData successfully triggers prefetching of data with exponential backoff for an errored URL which recovers: retry attempt 1 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;

exports[`Smart Card: Client prefetchData successfully triggers prefetching of data with exponential backoff for an errored URL which recovers: retry attempt 2 1`] = `
Array [
  "post",
  "https://api-private.stg.atlassian.com/object-resolver/resolve/batch",
  Array [
    Object {
      "resourceUrl": "https://www.google.com/3",
    },
  ],
]
`;
